# dummy

./: README.md  pyproject.toml
src/boot_dummy/: __init__.py  __main__.py  dummy.py
src/dummy/: __init__.py  dummy.py
src/dummy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_dummy.py
