[project]
name = "boot_dummy"
version = "0.2.0"
description = "A Python package to create synthetic data with realistic statistical properties."
authors = [
    {name = "Boot.dev", email = "info@boot.dev"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["synthetic data", "data generation", "statistics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Information Analysis"
]
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0"
]


[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
