[project]
name = "boot_dummy"
version = "0.3.1"
description = "A Python package to create synthetic data with realistic statistical properties."
authors = [
    {name = "Zak Remsik"}
]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["synthetic data", "data generation", "statistics"]
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0"
]


[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
